modify answer to Q5

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -2164,6 +2164,12 @@
     "\n",
     "The dimension of the input for each image is (1,1,2048), so it is equivalent to a vector with length 2048. After testing with the simplest model with 1 input layer and 1 output layer, this simplest model achieves 99% accuracy on training data but around 80% on validation data, so even the simplest model overfits the training data.\n",
     "As a result, a dropout layer which randomly drops 80% of the input nodes is added to overcome the overfitting problem. After the dropout layer is added, the model is able to achieve 82% accuracy.\n",
+    "\n",
+    "The result is significantly better than building the CNN from scratch. The advantages of the transfer learning approach are:\n",
+    "\n",
+    "1. It has more data to train the convolution layers, so that convolution layers can produce better features for the final fully connected layers to do classification. ImageNet has around 14,000,000 images while we only have around 8000 images. We cannot use many convolution layers due to overfitting problem in the previous approach. However, since the ImageNet images are similar to ours, the features learned in ImageNet are likely to be reusable in our problem. With transfer learning, we are doing something like training the convolution layers with 14,000,000 images instead of 8000.  \n",
+    "\n",
+    "2. It takes much less time for training the model. Since we only have to train the last fully connected model, the back propagation takes much less time. Furthermore, because there are less parameters to learn, the network stablizes much faster. The previous approach took 200 epoches for reach a stable validation score, while the current approach only takes around 20 epoches. \n",
     "\n"
    ]
   },
@@ -2396,13 +2402,7 @@
       "6680/6680 [==============================] - 1s 109us/step - loss: 0.4008 - acc: 0.8754 - val_loss: 0.5502 - val_acc: 0.8263\n",
       "\n",
       "Epoch 00038: val_loss did not improve\n",
-      "Epoch 39/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 39/50\n",
       "6680/6680 [==============================] - 1s 99us/step - loss: 0.4068 - acc: 0.8696 - val_loss: 0.5542 - val_acc: 0.8323\n",
       "\n",
       "Epoch 00039: val_loss did not improve\n",
